# mynteye-ros-improved

./: .gitignore  MyntEyeDemo2017.sln  README.md  setup.sh
MyntEye.NETWrapper/: AssemblyInfo.cpp  MyntEye.NETWrapper.cpp  MyntEye.NETWrapper.h  MyntEye.NETWrapper.vcxproj  MyntEye.NETWrapper.vcxproj.filters  MyntEyeDemo2017.h
MyntEyeDemo2017/: CVpainter.cpp  CVpainter.h  MyntEyeDemo2017.cpp  MyntEyeDemo2017.h  MyntEyeDemo2017.vcxproj  MyntEyeDemo2017.vcxproj.filters  PCViewer.cpp  PCViewer.h  pcl_visualizer.cpp  pcl_visualizer.h
MyntWrapper/: MyntEye.NETWrapper.h  MyntEyeDemo2017.h  MyntWrapper.vcxproj  MyntWrapper.vcxproj.filters
src/MyntEyeDemo2017/: CMakeLists.txt  MyntEyeDemo2017.vcxproj  MyntEyeDemo2017.vcxproj.filters  package.xml
src/MyntEyeDemo2017/include/: Matrix.hpp
src/MyntEyeDemo2017/src/: Matrix2.cpp  node.cpp  node2.cpp  node3.cpp
