<?xml version="1.0"?>
<package format="3">
  <name>mynt_eye_ros_wrapper_for_xavier</name>
  <version>2.0.0</version>
  <description>A mynt eye ros wrapper package</description>

  <maintainer email="jonathan.boisclair@uqtr.ca">Jonathan Boisclair</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/mynt_eye_ros_wrapper</url> -->

  <author email="jonathan.boisclair@uqtr.ca">Jonathan Boisclair</author>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf</build_depend>
  <build_depend condition="$ROS_VERSION == 2">tf2</build_depend>
  <build_depend>imu_filter_madgwick</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">roscpp</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 2">rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">tf</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 2">tf2</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">tf2</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
